# cloudy

./: .gitignore  EXPLORATION_INDEX.md  INSTALLATION_GUIDE.md  INSTALL_FIX_SUMMARY.md  MANIFEST.in  README.md  blender_architecture_analysis.md  blender_architecture_summary.txt  blender_workflow_diagrams.txt  debug_install.py  pyproject.toml  requirements.yml  run_trajectories_template.jl  trajectories.jl
clouded/: __init__.py  common_ps.code-workspace  datawrapper.py  rams.py  trajectories.py  types_core.py  utils.py
clouded.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
clouded/blender/: __init__.py  blender_animation.py  blender_camera.py  blender_config.py  blender_core.py  blender_import.py  blender_render.py  blender_run.py  run.py
clouded/plotting/: __init__.py  core_plotting.py  figure_data.py
clouded/pvplotting/: __init__.py  core_pvplotting.py  pv_to_blender.py  types_pvplotting.py
clouded/templates/: RAMSIN.template
clouded/vdb/: npy_to_vdb.py  vdb.py
clouded/vdb/vdb_c/: CMakeLists.txt  Makefile  README_netcdf_to_vdb.md  batch_convert.sh  example_config.json  netcdf_to_vdb.cpp
examples/: F01_data.pkl  example_pvplotting.ipynb  figure_data_example.ipynb  plotting_example_notebook.ipynb  test_row_headers.ipynb
tests/: BENCHMARK_RESULTS_individual_meshes.md  benchmark_individual_meshes.py  test_pvplotting.py
