[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clouded"
version = "1.0.0"
description = "Common utilities for atmospheric modeling and visualization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies - default set includes rams, plotting, and utils
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "pint",
    "pint-xarray",
    "metpy",
    "tqdm",
    "h5netcdf",  # Required for reading RAMS HDF5 files
    "matplotlib",
]

[project.optional-dependencies]
# RAMS atmospheric modeling utilities - now included in core
rams = [
    "pandas",
    "xarray",
    "pint",
    "pint-xarray",
    "metpy",
    "tqdm",
    "h5netcdf",  # Required for reading RAMS HDF5 files
]

# Trajectory analysis
trajectories = [
    "pandas",
    "xarray",
    "numpy",
    "scipy",
    "jinja2",
]

# Basic matplotlib plotting - now included in core
plotting = [
    "matplotlib",
    "pandas",
    "numpy",
]

# PyVista 3D visualization
pvplotting = [
    "pyvista",
    "numpy",
    "pandas",
]

# Blender integration for rendering
blender = [
    "numpy",
    "pandas",
]

# VDB volume data conversion
vdb = [
    "numpy",
    "pyopenvdb",
]

# Development tools
dev = [
    "pytest",
    "jupyter",
    "ipython",
    "ipywidgets",
]

# Install all submodules
all = [
    "pandas",
    "xarray",
    "matplotlib",
    "scipy",
    "tqdm",
    "jinja2",
    "pint",
    "pint-xarray",
    "metpy",
    "ipywidgets",
    "ipython",
    "scikit-image",
    "meshio",
    "pyvista",
    "h5netcdf",
    "pyopenvdb",
    "pytest",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/yourusername/common"
Repository = "https://github.com/yourusername/common"

[tool.setuptools]
# Automatically discover all packages under clouded/
packages = {find = {where = ["."], include = ["clouded*"]}}

[tool.setuptools.package-data]
# Include data files from within the clouded package
clouded = ["data/*.txt", "data/*.csv", "templates/*"]
